--- a/src/global.css
+++ b/src/global.css
@@ -10,11 +10,15 @@ html {
     box-sizing: inherit;
   }
   
-  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  body, h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
     font-weight: normal;
     background-color: #bdc3c8;
+  }
+
+  p {
+    margin: 0;
   }
   
   ol, ul {
