--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -55,8 +55,28 @@
 }
 .grade {
     width: 100%;
-    height: 700px;
+    height: fit-content;
     background-color: #ffffff;
     margin: 10px;
     border-radius: 1%;
+}
+.divProgramas {
+    display: flex;
+    align-items: center;
+    padding: 5px 0px 5px 0px;
+}
+.divImg {
+    width: 200px;
+    height: 115px;
+    display: flex;
+    align-items: center;
+    
+}
+.divDetalhes {
+ padding-left: 20px;
+}
+.divLinha {
+    height: 1px;
+    width: 100%;
+    background-color: #000000;
 }
