--- a/src/global.css
+++ b/src/global.css
@@ -10,13 +10,13 @@ html {
     box-sizing: inherit;
   }
   
-  body, h1, h2, h4, h5, h6 {
+  body, h1, h4, h5, h6 {
     margin: 0;
     padding: 0;
     font-weight: normal;
     background-color: #bdc3c8;
   }
-  h3 {
+  h2, h3 {
     margin: 0;
   }
 
